--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -533,91 +533,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cce0258d",
+   "metadata": {},
+   "source": [
+    "###### Octal Number"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "1150aa4a",
+   "execution_count": 7,
+   "id": "76a66008",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "1 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "2 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "3 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "4 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "5 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "6 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "7 <class 'int'>\n",
-      "****************************************************************************************************\n",
+      "1 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# octal numbers\n",
+    "a=0o1 # equivalent to decimal value 1\n",
+    "print(a, type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c89f91ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# octal numbers\n",
+    "b=0o7 # equivalent to decimal value 7\n",
+    "print(b, type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0b6f6b45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "8 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "9 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "2396672 <class 'int'>\n",
       "****************************************************************************************************\n"
      ]
     }
    ],
    "source": [
     "# octal numbers\n",
-    "var=0o0 # equivalent to decimal value 0\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0o1 # equivalent to decimal value 1\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0o2\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0o3\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0o4\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0o5\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0o6\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0o7\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0o10\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "\n",
-    "var=0o11 # equivalent to decimal value 9\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0o11111000\n",
+    "var=0o10 # equivalent to decimal value 8\n",
     "print(var,type(var))\n",
     "print('*'*100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "700a4c66",
    "metadata": {},
    "outputs": [
@@ -625,133 +612,94 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decimal Number 157 to octal number 0o235\n",
-      "Decimal Number 200 to octal number 0o310\n"
+      "Decimal Number 1 to Octal Number 0o1\n",
+      "Decimal Number 7 to Octal Number 0o7\n",
+      "Decimal Numberr 8 to Octal Number 0o10\n"
      ]
     }
    ],
    "source": [
     "# decimal to octal number\n",
-    "input1 = 157\n",
-    "input2 = 200\n",
+    "input1 = 1\n",
+    "input2 = 7\n",
+    "input3 = 8\n",
     "\n",
     "output1 = oct(input1)\n",
-    "print('Decimal Number {} to octal number {}'.format(input1, output1))\n",
+    "print('Decimal Number {} to Octal Number {}'.format(input1, output1))\n",
     "output2 = oct(input2)\n",
-    "print('Decimal Number {} to octal number {}'.format(input2, output2))"
+    "print('Decimal Number {} to Octal Number {}'.format(input2, output2))\n",
+    "output3 = oct(input3)\n",
+    "print('Decimal Numberr {} to Octal Number {}'.format(input3, output3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b6af3e7",
+   "metadata": {},
+   "source": [
+    "###### Hex Number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "6d4f88e1",
+   "execution_count": 14,
+   "id": "a0acd1ef",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "1 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "2 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "3 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "4 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "5 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "6 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "7 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "16 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "10 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "11 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "12 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "13 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "14 <class 'int'>\n",
-      "****************************************************************************************************\n",
-      "15 <class 'int'>\n",
-      "****************************************************************************************************\n"
+      "1 <class 'int'>\n"
      ]
     }
    ],
    "source": [
-    "# Hex Numbers \n",
-    "\n",
-    "var=0x0 # equivalent to decimal value 0\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
     "var=0x1 # equivalent to decimal value 1\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0x2\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0x3\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0x4\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0x5\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0x6\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0x7\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0x10\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "\n",
-    "var=0xA # equivalent to decimal value 10\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0xB\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0xC\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0xD\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0xE\n",
-    "print(var,type(var))\n",
-    "print('*'*100)\n",
-    "\n",
-    "var=0xF\n",
-    "print(var,type(var))\n",
-    "print('*'*100)"
+    "print(var,type(var))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
+   "id": "0e2002ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "var=0xA # equivalent to decimal value 10\n",
+    "print(var,type(var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "79631b2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "var=0xF # equivalent to decimal value 15\n",
+    "print(var,type(var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "7156de6a",
    "metadata": {},
    "outputs": [
@@ -759,20 +707,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decimal Number 255 to octal number 0xff\n",
-      "Decimal Number 200 to octal number 0xc8\n"
+      "Decimal Number 10 to octal number 0xa\n",
+      "Decimal Number 15 to octal number 0xf\n"
      ]
     }
    ],
    "source": [
     "# Decimal to hex converison\n",
-    "input1 = 255\n",
-    "input2 = 200\n",
+    "A = 10\n",
+    "B = 15\n",
     "\n",
-    "output1 = hex(input1)\n",
-    "print('Decimal Number {} to octal number {}'.format(input1, output1))\n",
-    "output2 = hex(input2)\n",
-    "print('Decimal Number {} to octal number {}'.format(input2, output2))"
+    "a_output = hex(A)\n",
+    "print('Decimal Number {} to octal number {}'.format(A, a_output))\n",
+    "b_output = hex(B)\n",
+    "print('Decimal Number {} to octal number {}'.format(B, b_output))"
    ]
   },
   {
@@ -785,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "17bcaab6",
    "metadata": {},
    "outputs": [
@@ -806,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "d73018e5",
    "metadata": {},
    "outputs": [
@@ -835,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "8e03e2d9",
    "metadata": {},
    "outputs": [
@@ -858,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "f91c3660",
    "metadata": {},
    "outputs": [
@@ -879,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c94c96cb",
    "metadata": {},
    "outputs": [
@@ -908,7 +856,7 @@
    "id": "21e2c1db",
    "metadata": {},
    "source": [
-    "## boolean"
+    "### boolean"
    ]
   },
   {
@@ -975,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "id": "3629cb53",
    "metadata": {},
    "outputs": [
@@ -983,24 +931,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1+0j) 0j\n",
-      "(1+0j)\n",
-      "1j\n",
+      "(1+0j) 0j\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(complex(True),complex(False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "58fa959f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "0j\n"
      ]
     }
    ],
    "source": [
-    "print(complex(True),complex(False))\n",
-    "print(complex(True,False))\n",
-    "print(complex(False,True))\n",
     "c=0+0j\n",
     "print(c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "5df8e33e",
    "metadata": {},
    "outputs": [
@@ -1008,19 +968,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n"
+      "True : False\n"
      ]
     }
    ],
    "source": [
-    "print(str(True))\n",
-    "print(str(False))"
+    "print(str(True), \":\" ,str(False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "b07845c2",
    "metadata": {},
    "outputs": [
@@ -1028,21 +986,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n",
-      "False\n"
+      "True True False\n"
      ]
     }
    ],
    "source": [
-    "print(bool(3.1))\n",
-    "print(bool(0.3))\n",
-    "print(bool(0.0))"
+    "print(bool(3.1), bool(0.3), bool(0.0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "db4e8f27",
    "metadata": {},
    "outputs": [
@@ -1050,24 +1004,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "False\n",
-      "True\n",
-      "True\n"
+      "False False True True\n"
      ]
     }
    ],
    "source": [
-    "print(bool(\"\"))\n",
-    "print(bool())\n",
-    "\n",
-    "print(bool('don'))\n",
-    "print(bool(11))"
+    "print(bool(\"\"), bool(), bool('don'), bool(11))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "7a47f490",
    "metadata": {
     "scrolled": true
@@ -1077,76 +1024,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "False\n"
+      "True True True False\n"
      ]
     }
    ],
    "source": [
-    "print(bool(1+2j))\n",
-    "print(bool(1+0j))\n",
-    "print(bool(0+2j))\n",
-    "print(bool(0+0j))"
+    "print(bool(1+2j), bool(1+0j), bool(0+2j), bool(0+0j))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "66aafffb",
+   "execution_count": 49,
+   "id": "27e6e76f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "int to bool : True\n",
-      "int to bool : False\n",
-      "****************************************************************************************************\n",
-      "float to bool : True\n",
-      "float to bool : False\n",
-      "****************************************************************************************************\n",
-      "string to bool : True\n",
-      "string to bool : False\n",
-      "****************************************************************************************************\n",
-      "complex to bool : True\n",
-      "complex to bool : True\n",
-      "complex to bool : False\n",
-      "complex to bool : True\n",
-      "****************************************************************************************************\n"
+      "int to bool : True\n"
      ]
     }
    ],
    "source": [
-    "# conversion of int/float/str to bool\n",
+    "# conversion of int to bool\n",
     "x=bool(100)\n",
+    "print('int to bool :',x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "07c6a86a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int to bool : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# conversion of float to bool\n",
+    "x=bool(100.100)\n",
+    "print('int to bool :',x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "6b5c9c5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int to bool : False\n",
+      "int to bool : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# conversion of str to bool\n",
+    "x=bool(\"\")\n",
+    "y=bool(\" \")\n",
     "print('int to bool :',x)\n",
-    "xx=bool(0)\n",
-    "print('int to bool :',xx)\n",
-    "print('*'*100)\n",
-    "\n",
-    "y=bool(10.10)\n",
-    "print('float to bool :',y)\n",
-    "yy=bool(0.0)\n",
-    "print('float to bool :',yy)\n",
-    "print('*'*100)\n",
-    "\n",
-    "z=bool(\"100\")\n",
-    "print('string to bool :',z)\n",
-    "zz=bool(\"\")\n",
-    "print('string to bool :',zz)\n",
-    "print('*'*100)\n",
-    "\n",
-    "z=bool(1+0j)\n",
-    "print('complex to bool :',z)\n",
-    "zz=bool(4+2j)\n",
-    "print('complex to bool :',zz)\n",
-    "zzz=bool(0+0j) # at least one value should be required\n",
-    "print('complex to bool :',zzz)\n",
-    "zzzz=bool(0+2j) \n",
-    "print('complex to bool :',zzzz)\n",
-    "print('*'*100)"
+    "print('int to bool :',y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "0138c877",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int to bool : True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# conversion of complex to bool\n",
+    "x=bool(1+2j)\n",
+    "y=bool(0+0j) # at least one value should be there in real or imag part other wise \"False\"\n",
+    "print('int to bool :',x, y)"
    ]
   },
   {
